[tool.poetry]
name = "RomanNumbers"
version = "0.1.0"
description = ""
authors = ["Winkel <dmesser@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"
rstr = "^2.2.6"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
